[gd_scene load_steps=5 format=3 uid="uid://bpksiove5g5iw"]

[ext_resource type="Script" path="res://scripts/Map/RoomLogic.gd" id="1_ccy10"]
[ext_resource type="PackedScene" uid="uid://drssvftnrptff" path="res://scenes/Map/Room/RoomTileMap.tscn" id="2_of0cm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5f6xw"]
size = Vector2(352, 352)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78bmg"]
size = Vector2(341, 127)

[node name="Room2" type="Node2D"]
script = ExtResource("1_ccy10")

[node name="RoomTileMap" parent="." instance=ExtResource("2_of0cm")]
layer_0/tile_data = PackedInt32Array(-196612, 1, 0, -131076, 1, 0, -65540, 1, 0, -4, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 131075, 1, 0, 65539, 1, 0, 3, 1, 0, -65533, 1, 0, -131069, 1, 0, -196605, 1, 0, -262141, 1, 0, -262142, 1, 0, -262143, 1, 0, -262144, 1, 0, -196609, 1, 0, -196610, 1, 0, -196611, 1, 0, -65539, 1, 0, -3, 1, 0, 65533, 1, 0, 131069, 1, 0, -131075, 1, 0, -131074, 1, 0, -65538, 1, 0, -2, 1, 0, 196605, 1, 0, 196606, 1, 0, 131070, 1, 0, 65534, 1, 0, -65537, 1, 0, -131073, 1, 0, -196608, 1, 0, -131072, 1, 0, -65536, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 131072, 1, 0, 65536, 1, 0, 0, 1, 0, -1, 1, 0, 131073, 1, 0, 65537, 1, 0, 1, 1, 0, -65535, 1, 0, -131071, 1, 0, -196607, 1, 0, -196606, 1, 0, -131070, 1, 0, -65534, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 262147, 1, 0, 262146, 1, 0, 262145, 1, 0, 262144, 1, 0, 327679, 1, 0, 327678, 1, 0, 327677, 1, 0, 327676, 1, 0, 327675, 1, 0, 262139, 1, 0, 196603, 1, 0, 131067, 1, 0, 65531, 1, 0, -5, 1, 0, -65541, 1, 0, -131077, 1, 0, -196613, 1, 0, -262149, 1, 0, -262148, 1, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -262140, 1, 0, -196604, 1, 0, 65540, 1, 0, 4, 1, 0, -65532, 1, 0, -131068, 1, 0, 393210, 1, 0, 327674, 1, 0, 262138, 1, 0, 196602, 1, 0, 131066, 1, 0, 65530, 1, 0, -6, 1, 0, -65542, 1, 0, -131078, 1, 0, -196614, 1, 0, -262150, 1, 0, -327686, 1, 0, -327685, 1, 0, -327684, 1, 0, -327683, 1, 0, -327682, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -327675, 1, 0, -262139, 1, 0, -196603, 1, 0, -131067, 1, 0, -65531, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, 327684, 1, 0, 327683, 1, 0, 327682, 1, 0, 327681, 1, 0, 327680, 1, 0, 393215, 1, 0, 393214, 1, 0, 393213, 1, 0, 393212, 1, 0, 393211, 1, 0, 458745, 262144, 3, 393209, 196608, 1, 327673, 196608, 1, 262137, 196608, 1, 196601, 196608, 0, -131079, 196608, 2, -196615, 196608, 1, -262151, 196608, 1, -327687, 196608, 1, -393223, 262144, 0, -393222, 65536, 3, -393221, 65536, 3, -393220, 65536, 3, -393219, 65536, 3, -393218, 65536, 3, -393217, 65536, 3, -458752, 65536, 3, -458751, 65536, 3, -458750, 65536, 3, -458749, 65536, 3, -458748, 65536, 3, -458747, 65536, 3, -458746, 458752, 0, -393210, 196608, 1, -327674, 196608, 1, -262138, 196608, 1, -196602, 196608, 2, 131078, 196608, 0, 196614, 196608, 1, 262150, 196608, 1, 327686, 196608, 1, 393222, 458752, 3, 393221, 65536, 3, 393220, 65536, 3, 393219, 65536, 3, 393218, 65536, 3, 393217, 65536, 3, 393216, 65536, 3, 458751, 65536, 3, 458750, 65536, 3, 458749, 65536, 3, 458748, 65536, 3, 458747, 65536, 3, 458746, 65536, 3)
layer_1/tile_data = PackedInt32Array(-131066, 65538, 0, -65530, 65538, 0, 6, 65538, 0, 65542, 65538, 0, 131065, 65538, 0, 65529, 65538, 0, -7, 65538, 0, -65543, 65538, 0)

[node name="RoomArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomArea"]
shape = SubResource("RectangleShape2D_5f6xw")

[node name="EnemyPosition" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2(3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_78bmg")

[connection signal="body_entered" from="RoomArea" to="." method="_on_room_area_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
